-bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
-bug#0001532: Various crashes in early stages of installation with no database populated.
-bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes 
-bug#0001549: Database crashes with use of array_to_sql_or
-bug#0001557: Quotes in Text Format graph template field breaks graph
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Remove call pass by reference from function declarations
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
-documentation: Documentation of specific rrdtool feature
-documentation: Use of SNMP exec option up to net-snmp 5.3
-feature#0000967: Option to force users to use SSL
-feature#0000954: implement --alt-y-grid graph option
-feature#0001009: XML Syntax enhancements (as a dup of 1225 only)
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0001111: add remove-device.php cli script, replace numerical constants for permission handling by PERM_*
-feature#0001122: Propagate Host Template changes to related hosts
-feature#0001123: Performance tweak by adding some indices
-feature#0001124: Devices/Host Templates - remove already associated objects from dropdown selector
-feature#0001179: Visual Fix for CACTI Graphs View Interface(list,preview)
-feature#0001185: Mass enable/disable graph export per graph from Graph Management
-feature#0001225: HowTo use the index at an arbitrary place in the OID field: introduces <rewrite_index>, <rewrite_value> to XML