@@ -285,7 +285,13 @@ function form_actions() {
 	print "<form action='data_queries.php' method='post'>\n";
 
 	if (sizeof($dq_array)) {
-		if (get_request_var_post("drp_action") == "1") { /* delete */
+		if (get_request_var_post("drp_action") == ACTION_NONE) { /* NONE */
+			print "	<tr>
+						<td class='textArea'>
+							<p>" . __("You did not select a valid action. Please select 'Return' to return to the previous menu.") . "</p>
+						</td>
+					</tr>\n";
+		}elseif (get_request_var_post("drp_action") == "1") { /* delete */
 			$graphs = array();
 
 			print "
@@ -304,7 +310,7 @@ function form_actions() {
 			</tr>\n";
 	}
 
-	if (!sizeof($dq_array)) {
+	if (!sizeof($dq_array) || get_request_var_post("drp_action") == ACTION_NONE) {
 		form_return_button_alt();
 	}else{
 		form_yesno_button_alt(serialize($dq_array), get_request_var_post("drp_action"));
